--- a/.github/workflows/scheduled-maintenance_backoffice_pagopa_to_betterstack.yml
+++ b/.github/workflows/scheduled-maintenance_backoffice_pagopa_to_betterstack.yml
@@ -4,6 +4,7 @@ name: Scheduled Maintenance to Betterstack Daily Script Execution
 on:
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:  # Permette di eseguire manualmente il workflow
 
 jobs:
   run-script:
