--- a/.github/workflows/gpd_get_fdr.yaml
+++ b/.github/workflows/gpd_get_fdr.yaml
@@ -59,7 +59,10 @@ jobs:
         if: ${{ (success() || failure())}}
         uses: slackapi/slack-github-action@e28cf165c92ffef168d23c5c9000cffc8a25e117 #v1.24.0
         with:
-          payload-file-path: "./python/gpd-get-fdr/payload.json"
+            payload: |
+                {
+                    "text": "Esito del job: ${{ job.status }}"
+                }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK          
