--- a/.github/workflows/gpd_get_fdr.yaml
+++ b/.github/workflows/gpd_get_fdr.yaml
@@ -63,11 +63,8 @@ jobs:
         id: slack
         if: ${{ (success() || failure()) && inputs.notify}}
         uses: slackapi/slack-github-action@e28cf165c92ffef168d23c5c9000cffc8a25e117 #v1.24.0
-        with:
-            payload: |
-                {
-                    "text": "Esito del job: ${{ job.status }}"
-                }
+        with: 
+            payload-file-path: "./payload.json"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK          
