--- a/.github/workflows/gh-workflow-immortality.yml
+++ b/.github/workflows/gh-workflow-immortality.yml
@@ -18,4 +18,5 @@ jobs:
         uses: PhrozenByte/gh-workflow-immortality@v1
         with:
           secret: ${{ secrets.GH_WORKFLOW_IMMORTALITY }}
-          repos: 'pagopa/pagopa-qa'
+          repos: 'pagopa/pagopa-qa/tree/main/.github/workflows'
+          
