[fix-PQ-362] add env params management

--- a/.github/workflows/gpd_report.yml
+++ b/.github/workflows/gpd_report.yml
@@ -5,19 +5,19 @@ on:
     
   workflow_dispatch:
     inputs:  
-        notify:
-          description: 'notify report results'
-          required: false
-          type: boolean
-          default: true
-        environment:
-          required: true
-          type: choice
-          description: Select the Environment
-          options:
-            - uat
-            - prod
-          default: prod
+      environment:
+        required: true
+        type: choice
+        description: Select the Environment
+        options:
+          - uat
+          - prod
+        default: prod
+      notify:
+        description: 'notify report results'
+        required: false
+        type: boolean
+        default: true
           
 permissions:
   id-token: write
@@ -110,7 +110,10 @@ jobs:
         shell: bash
         env:
           PG_USER_NAME: "apduser"
-          PG_APD_PASSWORD: ${{ secrets.PG_APD_PASSWORD }}
+          PG_DB_NAME: "apd"
+          PG_APD_PASSWORD: ${{ inputs.environment == 'prod' && secrets.PG_APD_PASSWORD || secrets.PG_APD_UAT_PASSWORD}} 
+          PG_HOST: ${{ inputs.environment == 'prod' && 'pagopa-p-neu-gps-pgflex.postgres.database.azure.com' || 'pagopa-u-neu-gps-pgflex.postgres.database.azure.com' }}
+          PG_PORT: "6432"
           PYTHONUNBUFFERED: "1"
 
         run: |
