--- a/.github/workflows/gpd_aca_report.yaml
+++ b/.github/workflows/gpd_aca_report.yaml
@@ -40,7 +40,7 @@ jobs:
     name: Execute auto-approve for 'Create Runner'
     runs-on: ubuntu-latest
     environment: 
-      name: ${{(github.event.inputs == null && 'prod') || inputs.environment }}
+      name: ${{ github.event.inputs.environment || 'prod' }}
     steps:
       - name: Auto approve
         uses: andrea-deri/auto-approve@042a1e58fa51acef74997dc9cebb1c665677d2ac
@@ -77,7 +77,7 @@ jobs:
     name: Execute auto-approve for 'Report Script'
     runs-on: ubuntu-latest
     environment: 
-      name: ${{(github.event.inputs == null && 'prod') || inputs.environment }}
+      name: ${{ github.event.inputs.environment || 'prod' }}
     steps:
       - name: Auto approve
         uses: andrea-deri/auto-approve@042a1e58fa51acef74997dc9cebb1c665677d2ac
@@ -159,7 +159,7 @@ jobs:
     name: Execute auto-approve for 'Cleanup Runner'
     runs-on: ubuntu-latest
     environment: 
-      name: ${{ inputs.environment || 'prod' }}
+      name: ${{ github.event.inputs.environment || 'prod' }}
     steps:
       - name: Auto approve
         uses: andrea-deri/auto-approve@042a1e58fa51acef74997dc9cebb1c665677d2ac
