add history table management

--- a/.github/workflows/gpd_aca_report.yaml
+++ b/.github/workflows/gpd_aca_report.yaml
@@ -114,6 +114,7 @@ jobs:
           export SA_CONNECTION_STRING=${{ secrets.SA_CONNECTION_STRING }}
           export SA_ACCOUNT_NAME="pagopadweuqifnsa"
           export SA_BLOB_CONTAINER_NAME="qibrokerreport"
+          export SA_BLOB_CONTAINER_HISTORY_NAME="qireportstatus"
           export START_DATE=${{inputs.start_date || 'yesterday'}}
           export END_DATE=${{inputs.end_date || 'yesterday'}}
           export PYTHONUNBUFFERED="1"
