--- a/.github/workflows/gpd_report.yml
+++ b/.github/workflows/gpd_report.yml
@@ -112,7 +112,7 @@ jobs:
           PG_USER_NAME: "apduser"
           PG_DB_NAME: "apd"
           PG_APD_PASSWORD: ${{ github.event_name == 'schedule' && secrets.PG_APD_PASSWORD || (inputs.environment == 'prod' && secrets.PG_APD_PASSWORD || secrets.PG_APD_UAT_PASSWORD) }}
-          PG_HOST: ${{ github.event_name == 'schedule' && 'pagopa-p-neu-gps-pgflex.postgres.database.azure.com' || (inputs.environment == 'prod' && 'pagopa-p-neu-gps-pgflex.postgres.database.azure.com' || 'pagopa-u-weu-gpd-pgflex.postgres.database.azure.com') }}
+          PG_HOST: ${{ github.event_name == 'schedule' && 'pagopa-p-weu-gpd-pgflex.postgres.database.azure.com' || (inputs.environment == 'prod' && 'pagopa-p-weu-gpd-pgflex.postgres.database.azure.com' || 'pagopa-u-weu-gpd-pgflex.postgres.database.azure.com') }}
           PG_PORT: "6432"
           PYTHONUNBUFFERED: "1"
 
